After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683483 - st-texture-cache: Fix stretched textures
st-texture-cache: Fix stretched textures
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2012-09-06 11:29 UTC by Florian Müllner
Modified: 2012-09-06 11:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
st-texture-cache: Fix stretched textures (4.20 KB, patch)
2012-09-06 11:29 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2012-09-06 11:29:44 UTC
See patch.
Comment 1 Florian Müllner 2012-09-06 11:29:47 UTC
Created attachment 223632 [details] [review]
st-texture-cache: Fix stretched textures

st_texture_cache_load_from_raw() enforces a square ClutterTexture,
resulting in the texture being stretched if the passed in image
data has a different width:height ratio.
Add padding in those cases as we already do when loading from pixbufs.
Comment 2 Giovanni Campagna 2012-09-06 11:35:44 UTC
Review of attachment 223632 [details] [review]:

Ok
Comment 3 Florian Müllner 2012-09-06 11:57:36 UTC
Attachment 223632 [details] pushed as 6b016c2 - st-texture-cache: Fix stretched textures